# thesis

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
include/algorithms/: spatialparquet_java_port.hpp
include/helpers/: assert.hpp  bitstream.hpp  swap_endian.hpp  types.hpp
src/: CMakeLists.txt  main.cpp
src/algorithms/: CMakeLists.txt  spatialparquet_java_port.cpp
src/helpers/: CMakeLists.txt  assert.cpp  bitstream.cpp
tests/: CMakeLists.txt  bitstream.cpp  java_port.cpp  test.cpp
tests/helpers/: CMakeLists.txt  generators.cpp
tests/include/: generators.hpp
